Made some minor adjustments for spacing when viewed on tablet and fixed a but with the sizing of the header title. Reduced the separator line width so that it doesn't touch the contact section on tablet or small desktop

--- a/src/AppBundle/Resources/assets/scss/components/_button-bar.scss
+++ b/src/AppBundle/Resources/assets/scss/components/_button-bar.scss
@@ -4,6 +4,9 @@
 
   &.add-bar{
     margin-left: 50%;
+    @include media(tablet) {
+        margin-left: 45%;
+    }
   }
 
 }
