--- a/src/AppBundle/Resources/assets/scss/components/_page-report-header.scss
+++ b/src/AppBundle/Resources/assets/scss/components/_page-report-header.scss
@@ -4,7 +4,8 @@
 
     .page-header-titles {
       float: left;
-      width: 56%;
+      width: 55%;
+      padding-right: 1%;
     }
 
     .page-header-meta-data {
